--- a/QuaggaJS/index.html
+++ b/QuaggaJS/index.html
@@ -6,6 +6,8 @@
         padding: 0px;
       }
     </style>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
 <script src="https://www.gstatic.com/cast/js/receiver/1.0/cast_receiver.js">
 </script>
