Customize HTML layout.

--- a/QuaggaJS/index.html
+++ b/QuaggaJS/index.html
@@ -2,9 +2,12 @@
 	<title>WhiteNoise for ChromeCast</title>
   <head>
     <style>
-      body {
+        body {
+            background: black;
         margin: 0px;
         padding: 0px;
+        margin-left: 200px;
+        margin-top: 100px;
       }
     </style>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -95,7 +98,7 @@ function manageNoise(){
 </script>
 
 <body >
-	<canvas id="myCanvas" width="1280" height="720"></canvas>
+	<canvas id="myCanvas" width="1280" height="800"></canvas>
 </body>
 
 </html>
