--- a/QuaggaJS/index.html
+++ b/QuaggaJS/index.html
@@ -4,11 +4,19 @@
     <style>
         body {
             background: black;
-        margin: 0px;
-        padding: 0px;
-        margin-left: 200px;
-        margin-top: 100px;
-      }
+            margin: 0px;
+            padding: 0px;
+        }
+        canvas {
+            position:fixed !important;
+            position:absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     </style>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -97,8 +105,10 @@ function manageNoise(){
 	});
 </script>
 
+
+
 <body >
-	<canvas id="myCanvas" width="1280" height="800"></canvas>
+	<canvas id="myCanvas" />
 </body>
 
 </html>
